# intangible-valuation

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CNAME  Intangible_Asset_Valuation.docx  LICENSE  README.md  constitution.md  index.html  mcp.json  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  publish.yml
api/advanced/: index.html
api/approaches/: index.html
api/asset_types/: index.html
api/core/: index.html
api/income_methods/: index.html
assets/stylesheets/: extra.css
docs/: chapters.md  index.md  mcp.md  robots.txt  skills.md
docs/api/: advanced.md  approaches.md  asset_types.md  core.md  income_methods.md
docs/assets/stylesheets/: extra.css
docs/examples/: advanced-methods.md  core-methods.md  industry-models.md
docs/overrides/: main.html
mcp/: index.html
mcp_server/: __init__.py  server.py  tools.py
search/: search_index.json
skills/: index.html
skills/asset-valuation/: SKILL.md
skills/discount-rate-construction/: SKILL.md
skills/impairment-checker/: SKILL.md
skills/ppa-workflow/: SKILL.md
skills/valuation-calculator/: SKILL.md
specs/bug-fix-gh-pages-pypi/: plan.md  spec.md  tasks.md
specs/custom-domain/: plan.md  spec.md  tasks.md
specs/intangible-valuation-platform/: data-model.md  plan.md  spec.md  tasks.md
specs/intangible-valuation-platform/contracts/: advanced-api.md  approaches-api.md  asset-types-api.md  core-api.md  error-handling.md  income-api.md  mcp-api.md  skills-api.md
src/: __init__.py  exceptions.py  logging_config.py
src/advanced/: __init__.py  goodwill.py  impairment_testing.py  litigation.py  monte_carlo.py  purchase_price_alloc.py  royalty_benchmark.py  transfer_pricing.py
src/approaches/: __init__.py  cost_approach.py  market_approach.py
src/asset_types/: __init__.py  brand_valuation.py  customer_valuation.py  human_capital.py  ip_valuation.py  technology_valuation.py
src/core/: __init__.py  discount_rates.py  statistics.py  time_value.py
src/income_methods/: __init__.py  excess_earnings.py  incremental_cashflow.py  relief_from_royalty.py
src/intangible_valuation/: __init__.py
src/intangible_valuation/advanced/: goodwill.py  impairment_testing.py  litigation.py  monte_carlo.py  purchase_price_alloc.py  royalty_benchmark.py  transfer_pricing.py
src/intangible_valuation/approaches/: cost_approach.py  market_approach.py
src/intangible_valuation/asset_types/: brand_valuation.py  customer_valuation.py  human_capital.py  ip_valuation.py  technology_valuation.py
src/intangible_valuation/core/: __init__.py  discount_rates.py  statistics.py  time_value.py
src/intangible_valuation/income_methods/: __init__.py  excess_earnings.py  incremental_cashflow.py  relief_from_royalty.py
src/intangible_valuation/utils/: formulas.py
src/utils/: __init__.py  constants.py  formulas.py
tests/: __init__.py
tests/test_advanced/: __init__.py  test_goodwill.py  test_impairment.py  test_litigation.py  test_monte_carlo.py  test_new_functions.py  test_ppa.py  test_royalty_benchmark.py  test_transfer_pricing.py
tests/test_approaches/: test_cost_approach.py  test_market_approach.py
tests/test_asset_types/: test_brand_valuation.py  test_customer_valuation.py  test_human_capital.py  test_ip_valuation.py  test_technology_valuation.py
tests/test_book_examples/: test_chapter_examples.py  test_exercise_solutions.py
tests/test_core/: test_discount_rates.py  test_edge_cases.py  test_formulas.py  test_integration.py  test_statistics.py  test_time_value.py
tests/test_income_methods/: test_excess_earnings.py  test_incremental_cashflow.py  test_relief_from_royalty.py
tests/test_mcp/: test_mcp_integration.py  test_server.py  test_tools.py
