[project]
name = "intangible-valuation"
version = "1.0.0"
description = "Python library for intangible asset valuation implementing cost, market, and income approaches. 124+ functions for patents, brands, goodwill, PPA, and more."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Intangible Valuation Contributors"}
]
keywords = [
    "intangible-asset-valuation",
    "patent-valuation",
    "brand-valuation",
    "goodwill-calculation",
    "purchase-price-allocation",
    "ppa",
    "relief-from-royalty",
    "mpeem",
    "multi-period-excess-earnings",
    "discount-rate",
    "wacc",
    "capm",
    "monte-carlo-simulation",
    "decision-tree",
    "impairment-testing",
    "asc-805",
    "ifrs-3",
    "asc-350",
    "ias-36",
    "dloM",
    "control-premium",
    "tax-amortization-benefit",
    "royalty-rate",
    "transfer-pricing",
    "litigation-damages",
    "customer-relationship-valuation",
    "technology-valuation",
    "mcp-server",
    "ai-valuation-tool",
    "model-context-protocol",
    "ai-agents",
    "financial-analysis",
    "valuation",
    "finance",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Accounting",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Typing :: Typed",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "numpy>=1.24,<3.0",
]

[project.optional-dependencies]
mcp = [
    "fastmcp>=0.1",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]
docs = [
    "mkdocs>=1.5",
    "mkdocstrings[python]>=0.24",
    "mkdocs-material>=9.0",
]

[project.scripts]
intangible-valuation-mcp = "mcp_server.server:main"

[project.urls]
Homepage = "https://github.com/simonplmak-cloud/intangible-valuation"
Documentation = "https://intangible-valuation.simonmak.com"
Repository = "https://github.com/simonplmak-cloud/intangible-valuation"
Changelog = "https://github.com/simonplmak-cloud/intangible-valuation/releases"
"Bug Tracker" = "https://github.com/simonplmak-cloud/intangible-valuation/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "mcp_server"]

[tool.hatch.build.targets.wheel.force-include]

[tool.hatch.build.targets.sdist]
include = ["src", "mcp_server", "README.md", "LICENSE", "CHANGELOG.md", "CITATION.cff"]
exclude = [
    "specs/",
    "constitution.md",
    "AGENTS.md",
    "mcp.json",
    "skills/",
    ".github/",
    "docs/",
    "tests/",
    "mkdocs.yml",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "PL", "PT", "T20", "ERA", "ARG", "RET"]
ignore = [
    "PLR0913",  # too many arguments (common in valuation functions)
    "PLR2004",  # magic value comparison (common in financial calculations)
    "PLR0912",  # too many branches
    "PLC0415",  # import not at top-level (used in dynamic function loading)
    "PT011",    # pytest.raises too broad (ValueError is specific enough for our use)
    "PT006",    # pytest.mark.parametrize type (existing pattern works)
    "PT012",    # pytest.raises single statement (we have multi-step tests)
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_optional = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
addopts = "--cov=src --cov-report=term-missing -v"
